--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet">
-       
-        <script scr="./js/script.js" defer></script>
-
+ <script src="script.js" defer></script>
+  
     </head>
     <body>
 <div class="game-board">
 
-
-<img src=".imagens/pipe.png" class="pipe">
+    <img src="imagens/mario.gif" class ="mario">
+<img src="imagens/pipe.png" class="pipe">
 
 </div>
-
-
-    
     </body>
-</html>>
+  
+</html>
