Atualização da inclusão do score

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet">
- <script src="script.js" defer></script>
-  
+
     </head>
     <body>
 <div class="game-board">
-
-    <img src="imagens/mario.gif" class ="mario">
+<span class="score"></span>
+<img src="imagens/clouds.png" class="clouds">
+<img src="imagens/mario.gif" class ="mario">
 <img src="imagens/pipe.png" class="pipe">
 
 </div>
-    </body>
-  
+<script src="js/script.js"></script>
+</body>
+
 </html>
